# ImgUpload

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
templates/: index.html  preview.html  success.html
