[package]
name = "rust_upload"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-multipart = "0.6"
actix-files = "0.6"
tokio = { version = "1.35.1", features = ["full"] }
futures = "0.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6.1", features = ["v4"] }
env_logger = "0.10"
mime_guess = "2.0"
bytes = "1.0"
log = "0.4"
